# naori-ai

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/chat/: Cargo.toml
examples/chat-vision/: Cargo.toml
examples/chat-vision/src/: main.rs
examples/chat/src/: main.rs
examples/generation/: Cargo.toml
examples/generation/src/: main.rs
examples/ollama-management/: Cargo.toml
examples/ollama-management/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
src/core/: types.rs
src/naori/: client.rs  mod.rs
src/providers/: mod.rs
src/providers/anthropic/: client.rs
src/providers/ollama/: client.rs
src/providers/openai/: client.rs
